flux/apps/ai/hermes-agent/camofox/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: camofox
  namespace: hermes-agent
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - camofox.${GLOBAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: camofox
          port: 6080
